--- a/Practice.Rmd
+++ b/Practice.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Practice"
+knit: (function(input_file, encoding) {
+    out_dir <- 'docs';
+    rmarkdown::render(input_file,
+      encoding=encoding,
+      output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Ryan O'Donnell"
 date: "`r Sys.Date()`"
 output: html_document
@@ -10,6 +15,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Coming soon!
+
+Resume the tutorial at "Create local branches with Git"
 
 ```{r cars}
 summary(cars)
